assets/css/style.css
/* adapted from http://werc.cat-v.org/ */
:root {
  --text-color: #2f3e46;
  --bg-color: #eaf4f4;
  --bg-2: #dce7e7;
  --accent-color: #a4c3b2;
  --alt-text-color: #355f52;
  --font: 'Noto Sans'
}

html {
  /*
    background: linear-gradient(90deg, var(--bg-color) 20px, transparent 1%) center, linear-gradient(var(--bg-color) 20px, transparent 1%) center, var(--alt-text-color);
    background-color:silver;
    background-size: 22px 22px;
    */
  background-image:
    radial-gradient(circle at 100% 150%, var(--accent-color) 24%, var(--bg-color) 24%, var(--bg-color) 28%, var(--accent-color) 28%, var(--accent-color) 36%, var(--bg-color) 36%, var(--bg-color) 40%, transparent 40%, transparent),
    radial-gradient(circle at 0 150%, var(--accent-color) 24%, var(--bg-color) 24%, var(--bg-color) 28%, var(--accent-color) 28%, var(--accent-color) 36%, var(--bg-color) 36%, var(--bg-color) 40%, transparent 40%, transparent),
    radial-gradient(circle at 50% 100%, var(--bg-color) 10%, var(--accent-color) 10%, var(--accent-color) 23%, var(--bg-color) 23%, var(--bg-color) 30%, var(--accent-color) 30%, var(--accent-color) 43%, var(--bg-color) 43%, var(--bg-color) 50%, var(--accent-color) 50%, var(--accent-color) 63%, var(--bg-color) 63%, var(--bg-color) 71%, transparent 71%, transparent),
    radial-gradient(circle at 100% 50%, var(--bg-color) 5%, var(--accent-color) 5%, var(--accent-color) 15%, var(--bg-color) 15%, var(--bg-color) 20%, var(--accent-color) 20%, var(--accent-color) 29%, var(--bg-color) 29%, var(--bg-color) 34%, var(--accent-color) 34%, var(--accent-color) 44%, var(--bg-color) 44%, var(--bg-color) 49%, transparent 49%, transparent),
    radial-gradient(circle at 0 50%, var(--bg-color) 5%, var(--accent-color) 5%, var(--accent-color) 15%, var(--bg-color) 15%, var(--bg-color) 20%, var(--accent-color) 20%, var(--accent-color) 29%, var(--bg-color) 29%, var(--bg-color) 34%, var(--accent-color) 34%, var(--accent-color) 44%, var(--bg-color) 44%, var(--bg-color) 49%, transparent 49%, transparent);
  background-size: 100px 50px;
}

body {
  max-width: 75%;
  margin: 3em auto;
  display: flex;
  flex-wrap: wrap;
  background-color: var(--bg-color);
  color: var(--text-color);
  padding: 3em;
  font: 1.03em /1.5 var(--font), sans-serif;
  border-radius: 10px;
  min-height: calc(100vh - 12em);
}

header {
  flex-basis: 100%;
  flex-shrink: 0;
  display: inline;
  grid-template-columns: 30% 50%;
  /*
  border-bottom: var(--text-color) 1px solid;
  border-width: 85%;
  */
}

header * {
  margin-bottom: 1rem;
}

header>h1 {
  float: right;
  display: inline;
  margin: 0;

}

header>img {
  float: left;
}

.logo {
  /*! display: grid; */
  max-width: 8em;
  vertical-align: middle;
  /*! margin-right: 2em; */
  border-radius: 10px;
}

main {
  flex-basis: 85%;
  padding-left: 1em;
  max-width: 85%;
  display: flex;
  margin-top: 1rem;
}

main img {
  max-width: 80%;
  margin: 0 auto;
  display: block;
}

header nav {
  display: flex;
  justify-content: space-between;
}

nav a,
header a {
  text-decoration: none;
  color: var(--alt-text-color);
}

a {
  color: var(--alt-text-color);
}

a:hover {
  background-color: var(--text-color);
  color: var(--bg-color);
}

::selection {
  color: var(--text-color);
  background: var(--accent-color);
}

body>nav {
  flex-basis: content;
  padding-right: 2em;
}

nav ul {
  padding-left: 1em;
}

/*
nav>details>summary {
  list-style: none;
  cursor: pointer;
}

nav>details>summary {
  display: inline;
}
*/

footer {
  display: flex;
  justify-content: space-evenly;
  flex-basis: 100%;
  flex-shrink: 0;
  height: 1.5em;
  margin: auto;
  margin-top: 1em;
  max-width: 50%;
}

footer>* {
  margin: unset;
  color: var(--alt-text-color);
}


/* specific styling */
.icon {
  width: 1.5em;
  vertical-align: top;
}

a:hover.icon {
  background-color: none;
  color: inherit;
}

.post-header {
  display: flex;
}

.post-info-card {
  flex-basis: 35%;
}

.post-info-card p {
  margin: 0.2rem 0;
}

.p-name {
  margin-top: 0.2rem;
  flex-basis: 65%;
}

section.posts {
  flex-basis: 75%
}

#mastodon>a:hover,
#mastodon>a {
  text-decoration: none;
  color: var(--text-color);
}

#mastodon>a>article>* {
  padding: 0;
  margin: 0.5rem 0;
}

#mastodon>a>article {
  margin-top: 1rem;
}

#mastodon>a>article>img {
  margin: 0 auto;
  padding-top: 0.5rem;
  display: block;
  max-width: 85%;
  border-radius: 10px;
}

#mastodon-section {
  max-height: 33rem;
  max-width: 35%;
  margin-left: 1rem;
  background: var(--bg-2);
  padding: 0rem 2rem 0.25rem 2rem;
  border-radius: 10px;
  flex-basis: 35%;
}

#mastodon-posts {
  height: 80%;
  overflow-x: hidden;
  overflow-y: auto;
}

article.h-entry {
  max-width: 85%;
  margin: 0 auto;
}

article table {
  margin: 0 auto
}

article img {
  margin: 0 auto;
  max-width: 75%;
  display: block;
  border-radius: 10px;
}

article pre {
  max-width: 85%;
  margin: 0 auto;
  overflow-x: scroll;
  background-color: var(--bg-2);
  border-radius: 10px;
  padding: 1rem;
}

article figcaption {
  font-style: italic;
  font-size: 0.9rem;
}

/* media queries */
@media screen and (max-width: 1200px) {
  body {
    padding: 1rem;
    max-width: 100%;
    border-radius: 0;
    margin: 4rem 0rem 0px 0px;
    flex-direction: row;
    font: 0.875em /1.5 var(--font), sans-serif;
  }

  header {
    padding-top: 2rem;
  }

  nav {
    border-bottom: var(--text-color) 1px solid;
    border-width: 85%;
    margin: auto;
  }

  #mastodon-section {
    margin: 0 0;
    padding: 0rem 2rem 0.25rem 2rem;
    max-width: calc(100vw - 6rem);
  }

  footer {
    flex-direction: row;
  }

  /*
   nav>details>summary::before {
    content: "☰";
  } 
  */

  nav>ul * {
    display: inline;
  }

  main section {
    max-width: 95%;
  }

  main {
    display: grid;
    padding: 0;
    flex-basis: unset;
    max-width: unset;
  }

  article.h-entry {
    max-width: 85vw;
  }

  article.h-entry img {
    max-width: 95%;
  }
}

/* media query for dark mode */
@media (prefers-color-scheme: dark) {
  :root {
    --bg-2: #29363D;
    --text-color: #eaf4f4;
    --bg-color: #29363D;
    --bg-color: #192025FF;
    --accent-color: #355f52;
    --accent-color: #3A4644FF;
    --alt-text-color: #819B91FF;
    --font: 'Noto Sans';
  }
}

